Reformat main controllers.